// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HouseCard should match the snapshot 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <HouseCard
    house={
        Object {
            "ancestralWeapons": Array [
              "Lady Forlorn",
            ],
            "cadetBranches": Array [],
            "coatOfArms": "Three black ravens in flight, holding three red hearts, on a white field(Argent, three ravens volant sable, each clutching in their claws a heart gules)",
            "currentLord": "https://www.anapioficeandfire.com/api/characters/681",
            "diedOut": "",
            "founded": "",
            "founder": "https://www.anapioficeandfire.com/api/characters/256",
            "heir": "https://www.anapioficeandfire.com/api/characters/677",
            "name": "House Corbray of Heart's Home",
            "overlord": "https://www.anapioficeandfire.com/api/houses/7",
            "region": "",
            "seats": Array [
              "Heart's Home",
            ],
            "swornMembers": Array [
              "https://www.anapioficeandfire.com/api/characters/255",
              "https://www.anapioficeandfire.com/api/characters/256",
              "https://www.anapioficeandfire.com/api/characters/447",
              "https://www.anapioficeandfire.com/api/characters/654",
              "https://www.anapioficeandfire.com/api/characters/677",
              "https://www.anapioficeandfire.com/api/characters/681",
              "https://www.anapioficeandfire.com/api/characters/871",
              "https://www.anapioficeandfire.com/api/characters/1182",
            ],
            "titles": Array [
              "Lord of Heart's Home",
              "King of the Fingers (historical)",
            ],
            "url": "https://www.anapioficeandfire.com/api/houses/81",
            "words": "",
          }
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <h3>
          House Corbray of Heart's Home
</h3>,
        false,
        <h4>
          Founded: 
          N/A
</h4>,
        <ul>
          <p>
                    Seats:
          </p>
          <li>
                    Heart's Home
          </li>
</ul>,
        <ul>
          <p>
                    Titles:
          </p>
          <li>
                    Lord of Heart's Home
          </li>
          <li>
                    King of the Fingers (historical)
          </li>
</ul>,
        <p>
          Coat of Arms: 
          Three black ravens in flight, holding three red hearts, on a white field(Argent, three ravens volant sable, each clutching in their claws a heart gules)
</p>,
        <ul>
          <p>
                    Ancestral Weapons:
          </p>
          <li>
                    Lady Forlorn
          </li>
</ul>,
      ],
      "className": "Card",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "House Corbray of Heart's Home",
        },
        "ref": null,
        "rendered": "House Corbray of Heart's Home",
        "type": "h3",
      },
      false,
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            "Founded: ",
            "N/A",
          ],
        },
        "ref": null,
        "rendered": Array [
          "Founded: ",
          "N/A",
        ],
        "type": "h4",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <p>
              Seats:
</p>,
            Array [
              <li>
                Heart's Home
</li>,
            ],
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Seats:",
            },
            "ref": null,
            "rendered": "Seats:",
            "type": "p",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Heart's Home",
            },
            "ref": null,
            "rendered": "Heart's Home",
            "type": "li",
          },
        ],
        "type": "ul",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <p>
              Titles:
</p>,
            Array [
              <li>
                Lord of Heart's Home
</li>,
              <li>
                King of the Fingers (historical)
</li>,
            ],
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Titles:",
            },
            "ref": null,
            "rendered": "Titles:",
            "type": "p",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Lord of Heart's Home",
            },
            "ref": null,
            "rendered": "Lord of Heart's Home",
            "type": "li",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "King of the Fingers (historical)",
            },
            "ref": null,
            "rendered": "King of the Fingers (historical)",
            "type": "li",
          },
        ],
        "type": "ul",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            "Coat of Arms: ",
            "Three black ravens in flight, holding three red hearts, on a white field(Argent, three ravens volant sable, each clutching in their claws a heart gules)",
          ],
        },
        "ref": null,
        "rendered": Array [
          "Coat of Arms: ",
          "Three black ravens in flight, holding three red hearts, on a white field(Argent, three ravens volant sable, each clutching in their claws a heart gules)",
        ],
        "type": "p",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <p>
              Ancestral Weapons:
</p>,
            Array [
              <li>
                Lady Forlorn
</li>,
            ],
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Ancestral Weapons:",
            },
            "ref": null,
            "rendered": "Ancestral Weapons:",
            "type": "p",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Lady Forlorn",
            },
            "ref": null,
            "rendered": "Lady Forlorn",
            "type": "li",
          },
        ],
        "type": "ul",
      },
    ],
    "type": "article",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <h3>
            House Corbray of Heart's Home
</h3>,
          false,
          <h4>
            Founded: 
            N/A
</h4>,
          <ul>
            <p>
                        Seats:
            </p>
            <li>
                        Heart's Home
            </li>
</ul>,
          <ul>
            <p>
                        Titles:
            </p>
            <li>
                        Lord of Heart's Home
            </li>
            <li>
                        King of the Fingers (historical)
            </li>
</ul>,
          <p>
            Coat of Arms: 
            Three black ravens in flight, holding three red hearts, on a white field(Argent, three ravens volant sable, each clutching in their claws a heart gules)
</p>,
          <ul>
            <p>
                        Ancestral Weapons:
            </p>
            <li>
                        Lady Forlorn
            </li>
</ul>,
        ],
        "className": "Card",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "House Corbray of Heart's Home",
          },
          "ref": null,
          "rendered": "House Corbray of Heart's Home",
          "type": "h3",
        },
        false,
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              "Founded: ",
              "N/A",
            ],
          },
          "ref": null,
          "rendered": Array [
            "Founded: ",
            "N/A",
          ],
          "type": "h4",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <p>
                Seats:
</p>,
              Array [
                <li>
                  Heart's Home
</li>,
              ],
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Seats:",
              },
              "ref": null,
              "rendered": "Seats:",
              "type": "p",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Heart's Home",
              },
              "ref": null,
              "rendered": "Heart's Home",
              "type": "li",
            },
          ],
          "type": "ul",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <p>
                Titles:
</p>,
              Array [
                <li>
                  Lord of Heart's Home
</li>,
                <li>
                  King of the Fingers (historical)
</li>,
              ],
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Titles:",
              },
              "ref": null,
              "rendered": "Titles:",
              "type": "p",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Lord of Heart's Home",
              },
              "ref": null,
              "rendered": "Lord of Heart's Home",
              "type": "li",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "King of the Fingers (historical)",
              },
              "ref": null,
              "rendered": "King of the Fingers (historical)",
              "type": "li",
            },
          ],
          "type": "ul",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              "Coat of Arms: ",
              "Three black ravens in flight, holding three red hearts, on a white field(Argent, three ravens volant sable, each clutching in their claws a heart gules)",
            ],
          },
          "ref": null,
          "rendered": Array [
            "Coat of Arms: ",
            "Three black ravens in flight, holding three red hearts, on a white field(Argent, three ravens volant sable, each clutching in their claws a heart gules)",
          ],
          "type": "p",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <p>
                Ancestral Weapons:
</p>,
              Array [
                <li>
                  Lady Forlorn
</li>,
              ],
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Ancestral Weapons:",
              },
              "ref": null,
              "rendered": "Ancestral Weapons:",
              "type": "p",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Lady Forlorn",
              },
              "ref": null,
              "rendered": "Lady Forlorn",
              "type": "li",
            },
          ],
          "type": "ul",
        },
      ],
      "type": "article",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`HouseCard should match the snapshot if house founded 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <HouseCard
    house={
        Object {
            "ancestralWeapons": Array [
              "Lady Forlorn",
            ],
            "cadetBranches": Array [],
            "coatOfArms": "Three black ravens in flight, holding three red hearts, on a white field(Argent, three ravens volant sable, each clutching in their claws a heart gules)",
            "currentLord": "https://www.anapioficeandfire.com/api/characters/681",
            "diedOut": "",
            "founded": "Founded",
            "founder": "https://www.anapioficeandfire.com/api/characters/256",
            "heir": "https://www.anapioficeandfire.com/api/characters/677",
            "name": "House Corbray of Heart's Home",
            "overlord": "https://www.anapioficeandfire.com/api/houses/7",
            "region": "",
            "seats": Array [
              "Heart's Home",
            ],
            "swornMembers": Array [
              "https://www.anapioficeandfire.com/api/characters/255",
              "https://www.anapioficeandfire.com/api/characters/256",
              "https://www.anapioficeandfire.com/api/characters/447",
              "https://www.anapioficeandfire.com/api/characters/654",
              "https://www.anapioficeandfire.com/api/characters/677",
              "https://www.anapioficeandfire.com/api/characters/681",
              "https://www.anapioficeandfire.com/api/characters/871",
              "https://www.anapioficeandfire.com/api/characters/1182",
            ],
            "titles": Array [
              "Lord of Heart's Home",
              "King of the Fingers (historical)",
            ],
            "url": "https://www.anapioficeandfire.com/api/houses/81",
            "words": "",
          }
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <h3>
          House Corbray of Heart's Home
</h3>,
        false,
        <h4>
          Founded: 
          Founded
</h4>,
        <ul>
          <p>
                    Seats:
          </p>
          <li>
                    Heart's Home
          </li>
</ul>,
        <ul>
          <p>
                    Titles:
          </p>
          <li>
                    Lord of Heart's Home
          </li>
          <li>
                    King of the Fingers (historical)
          </li>
</ul>,
        <p>
          Coat of Arms: 
          Three black ravens in flight, holding three red hearts, on a white field(Argent, three ravens volant sable, each clutching in their claws a heart gules)
</p>,
        <ul>
          <p>
                    Ancestral Weapons:
          </p>
          <li>
                    Lady Forlorn
          </li>
</ul>,
      ],
      "className": "Card",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "House Corbray of Heart's Home",
        },
        "ref": null,
        "rendered": "House Corbray of Heart's Home",
        "type": "h3",
      },
      false,
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            "Founded: ",
            "Founded",
          ],
        },
        "ref": null,
        "rendered": Array [
          "Founded: ",
          "Founded",
        ],
        "type": "h4",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <p>
              Seats:
</p>,
            Array [
              <li>
                Heart's Home
</li>,
            ],
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Seats:",
            },
            "ref": null,
            "rendered": "Seats:",
            "type": "p",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Heart's Home",
            },
            "ref": null,
            "rendered": "Heart's Home",
            "type": "li",
          },
        ],
        "type": "ul",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <p>
              Titles:
</p>,
            Array [
              <li>
                Lord of Heart's Home
</li>,
              <li>
                King of the Fingers (historical)
</li>,
            ],
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Titles:",
            },
            "ref": null,
            "rendered": "Titles:",
            "type": "p",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Lord of Heart's Home",
            },
            "ref": null,
            "rendered": "Lord of Heart's Home",
            "type": "li",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "King of the Fingers (historical)",
            },
            "ref": null,
            "rendered": "King of the Fingers (historical)",
            "type": "li",
          },
        ],
        "type": "ul",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            "Coat of Arms: ",
            "Three black ravens in flight, holding three red hearts, on a white field(Argent, three ravens volant sable, each clutching in their claws a heart gules)",
          ],
        },
        "ref": null,
        "rendered": Array [
          "Coat of Arms: ",
          "Three black ravens in flight, holding three red hearts, on a white field(Argent, three ravens volant sable, each clutching in their claws a heart gules)",
        ],
        "type": "p",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <p>
              Ancestral Weapons:
</p>,
            Array [
              <li>
                Lady Forlorn
</li>,
            ],
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Ancestral Weapons:",
            },
            "ref": null,
            "rendered": "Ancestral Weapons:",
            "type": "p",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Lady Forlorn",
            },
            "ref": null,
            "rendered": "Lady Forlorn",
            "type": "li",
          },
        ],
        "type": "ul",
      },
    ],
    "type": "article",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <h3>
            House Corbray of Heart's Home
</h3>,
          false,
          <h4>
            Founded: 
            Founded
</h4>,
          <ul>
            <p>
                        Seats:
            </p>
            <li>
                        Heart's Home
            </li>
</ul>,
          <ul>
            <p>
                        Titles:
            </p>
            <li>
                        Lord of Heart's Home
            </li>
            <li>
                        King of the Fingers (historical)
            </li>
</ul>,
          <p>
            Coat of Arms: 
            Three black ravens in flight, holding three red hearts, on a white field(Argent, three ravens volant sable, each clutching in their claws a heart gules)
</p>,
          <ul>
            <p>
                        Ancestral Weapons:
            </p>
            <li>
                        Lady Forlorn
            </li>
</ul>,
        ],
        "className": "Card",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "House Corbray of Heart's Home",
          },
          "ref": null,
          "rendered": "House Corbray of Heart's Home",
          "type": "h3",
        },
        false,
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              "Founded: ",
              "Founded",
            ],
          },
          "ref": null,
          "rendered": Array [
            "Founded: ",
            "Founded",
          ],
          "type": "h4",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <p>
                Seats:
</p>,
              Array [
                <li>
                  Heart's Home
</li>,
              ],
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Seats:",
              },
              "ref": null,
              "rendered": "Seats:",
              "type": "p",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Heart's Home",
              },
              "ref": null,
              "rendered": "Heart's Home",
              "type": "li",
            },
          ],
          "type": "ul",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <p>
                Titles:
</p>,
              Array [
                <li>
                  Lord of Heart's Home
</li>,
                <li>
                  King of the Fingers (historical)
</li>,
              ],
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Titles:",
              },
              "ref": null,
              "rendered": "Titles:",
              "type": "p",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Lord of Heart's Home",
              },
              "ref": null,
              "rendered": "Lord of Heart's Home",
              "type": "li",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "King of the Fingers (historical)",
              },
              "ref": null,
              "rendered": "King of the Fingers (historical)",
              "type": "li",
            },
          ],
          "type": "ul",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              "Coat of Arms: ",
              "Three black ravens in flight, holding three red hearts, on a white field(Argent, three ravens volant sable, each clutching in their claws a heart gules)",
            ],
          },
          "ref": null,
          "rendered": Array [
            "Coat of Arms: ",
            "Three black ravens in flight, holding three red hearts, on a white field(Argent, three ravens volant sable, each clutching in their claws a heart gules)",
          ],
          "type": "p",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <p>
                Ancestral Weapons:
</p>,
              Array [
                <li>
                  Lady Forlorn
</li>,
              ],
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Ancestral Weapons:",
              },
              "ref": null,
              "rendered": "Ancestral Weapons:",
              "type": "p",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Lady Forlorn",
              },
              "ref": null,
              "rendered": "Lady Forlorn",
              "type": "li",
            },
          ],
          "type": "ul",
        },
      ],
      "type": "article",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`HouseCard should match the snapshot if house words exist 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <HouseCard
    house={
        Object {
            "ancestralWeapons": Array [
              "Lady Forlorn",
            ],
            "cadetBranches": Array [],
            "coatOfArms": "Three black ravens in flight, holding three red hearts, on a white field(Argent, three ravens volant sable, each clutching in their claws a heart gules)",
            "currentLord": "https://www.anapioficeandfire.com/api/characters/681",
            "diedOut": "",
            "founded": "Founded",
            "founder": "https://www.anapioficeandfire.com/api/characters/256",
            "heir": "https://www.anapioficeandfire.com/api/characters/677",
            "name": "House Corbray of Heart's Home",
            "overlord": "https://www.anapioficeandfire.com/api/houses/7",
            "region": "",
            "seats": Array [
              "Heart's Home",
            ],
            "swornMembers": Array [
              "https://www.anapioficeandfire.com/api/characters/255",
              "https://www.anapioficeandfire.com/api/characters/256",
              "https://www.anapioficeandfire.com/api/characters/447",
              "https://www.anapioficeandfire.com/api/characters/654",
              "https://www.anapioficeandfire.com/api/characters/677",
              "https://www.anapioficeandfire.com/api/characters/681",
              "https://www.anapioficeandfire.com/api/characters/871",
              "https://www.anapioficeandfire.com/api/characters/1182",
            ],
            "titles": Array [
              "Lord of Heart's Home",
              "King of the Fingers (historical)",
            ],
            "url": "https://www.anapioficeandfire.com/api/houses/81",
            "words": "We HAVE WORDS",
          }
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <h3>
          House Corbray of Heart's Home
</h3>,
        <h4>
          We HAVE WORDS
</h4>,
        <h4>
          Founded: 
          Founded
</h4>,
        <ul>
          <p>
                    Seats:
          </p>
          <li>
                    Heart's Home
          </li>
</ul>,
        <ul>
          <p>
                    Titles:
          </p>
          <li>
                    Lord of Heart's Home
          </li>
          <li>
                    King of the Fingers (historical)
          </li>
</ul>,
        <p>
          Coat of Arms: 
          Three black ravens in flight, holding three red hearts, on a white field(Argent, three ravens volant sable, each clutching in their claws a heart gules)
</p>,
        <ul>
          <p>
                    Ancestral Weapons:
          </p>
          <li>
                    Lady Forlorn
          </li>
</ul>,
      ],
      "className": "Card",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "House Corbray of Heart's Home",
        },
        "ref": null,
        "rendered": "House Corbray of Heart's Home",
        "type": "h3",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "We HAVE WORDS",
        },
        "ref": null,
        "rendered": "We HAVE WORDS",
        "type": "h4",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            "Founded: ",
            "Founded",
          ],
        },
        "ref": null,
        "rendered": Array [
          "Founded: ",
          "Founded",
        ],
        "type": "h4",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <p>
              Seats:
</p>,
            Array [
              <li>
                Heart's Home
</li>,
            ],
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Seats:",
            },
            "ref": null,
            "rendered": "Seats:",
            "type": "p",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Heart's Home",
            },
            "ref": null,
            "rendered": "Heart's Home",
            "type": "li",
          },
        ],
        "type": "ul",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <p>
              Titles:
</p>,
            Array [
              <li>
                Lord of Heart's Home
</li>,
              <li>
                King of the Fingers (historical)
</li>,
            ],
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Titles:",
            },
            "ref": null,
            "rendered": "Titles:",
            "type": "p",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Lord of Heart's Home",
            },
            "ref": null,
            "rendered": "Lord of Heart's Home",
            "type": "li",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "King of the Fingers (historical)",
            },
            "ref": null,
            "rendered": "King of the Fingers (historical)",
            "type": "li",
          },
        ],
        "type": "ul",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            "Coat of Arms: ",
            "Three black ravens in flight, holding three red hearts, on a white field(Argent, three ravens volant sable, each clutching in their claws a heart gules)",
          ],
        },
        "ref": null,
        "rendered": Array [
          "Coat of Arms: ",
          "Three black ravens in flight, holding three red hearts, on a white field(Argent, three ravens volant sable, each clutching in their claws a heart gules)",
        ],
        "type": "p",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <p>
              Ancestral Weapons:
</p>,
            Array [
              <li>
                Lady Forlorn
</li>,
            ],
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Ancestral Weapons:",
            },
            "ref": null,
            "rendered": "Ancestral Weapons:",
            "type": "p",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Lady Forlorn",
            },
            "ref": null,
            "rendered": "Lady Forlorn",
            "type": "li",
          },
        ],
        "type": "ul",
      },
    ],
    "type": "article",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <h3>
            House Corbray of Heart's Home
</h3>,
          <h4>
            We HAVE WORDS
</h4>,
          <h4>
            Founded: 
            Founded
</h4>,
          <ul>
            <p>
                        Seats:
            </p>
            <li>
                        Heart's Home
            </li>
</ul>,
          <ul>
            <p>
                        Titles:
            </p>
            <li>
                        Lord of Heart's Home
            </li>
            <li>
                        King of the Fingers (historical)
            </li>
</ul>,
          <p>
            Coat of Arms: 
            Three black ravens in flight, holding three red hearts, on a white field(Argent, three ravens volant sable, each clutching in their claws a heart gules)
</p>,
          <ul>
            <p>
                        Ancestral Weapons:
            </p>
            <li>
                        Lady Forlorn
            </li>
</ul>,
        ],
        "className": "Card",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "House Corbray of Heart's Home",
          },
          "ref": null,
          "rendered": "House Corbray of Heart's Home",
          "type": "h3",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "We HAVE WORDS",
          },
          "ref": null,
          "rendered": "We HAVE WORDS",
          "type": "h4",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              "Founded: ",
              "Founded",
            ],
          },
          "ref": null,
          "rendered": Array [
            "Founded: ",
            "Founded",
          ],
          "type": "h4",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <p>
                Seats:
</p>,
              Array [
                <li>
                  Heart's Home
</li>,
              ],
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Seats:",
              },
              "ref": null,
              "rendered": "Seats:",
              "type": "p",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Heart's Home",
              },
              "ref": null,
              "rendered": "Heart's Home",
              "type": "li",
            },
          ],
          "type": "ul",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <p>
                Titles:
</p>,
              Array [
                <li>
                  Lord of Heart's Home
</li>,
                <li>
                  King of the Fingers (historical)
</li>,
              ],
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Titles:",
              },
              "ref": null,
              "rendered": "Titles:",
              "type": "p",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Lord of Heart's Home",
              },
              "ref": null,
              "rendered": "Lord of Heart's Home",
              "type": "li",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "King of the Fingers (historical)",
              },
              "ref": null,
              "rendered": "King of the Fingers (historical)",
              "type": "li",
            },
          ],
          "type": "ul",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              "Coat of Arms: ",
              "Three black ravens in flight, holding three red hearts, on a white field(Argent, three ravens volant sable, each clutching in their claws a heart gules)",
            ],
          },
          "ref": null,
          "rendered": Array [
            "Coat of Arms: ",
            "Three black ravens in flight, holding three red hearts, on a white field(Argent, three ravens volant sable, each clutching in their claws a heart gules)",
          ],
          "type": "p",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <p>
                Ancestral Weapons:
</p>,
              Array [
                <li>
                  Lady Forlorn
</li>,
              ],
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Ancestral Weapons:",
              },
              "ref": null,
              "rendered": "Ancestral Weapons:",
              "type": "p",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Lady Forlorn",
              },
              "ref": null,
              "rendered": "Lady Forlorn",
              "type": "li",
            },
          ],
          "type": "ul",
        },
      ],
      "type": "article",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
